--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
-.homepage{
-    /* background-image: url(html_task_pictures/pexels-photo-5965948.jpeg); */
-    width: 1200;
-    height: 500;
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 16px 18px;
+  text-decoration: none;
+  font-size: 17px;
 }
-#section1 {
-  background-image: url(html_task_pictures/pexels-photo-5965948.jpeg);
+
+#home-button {
+  color: red;
+}
+
+#homepage-background {
+  background-image: url("html_task_pictures/pexels-photo-5965948.jpeg");
+  min-height: 600px;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: auto;
-}
+  background-size: cover;
+
+ }
