Added the Section-6 and About Us Html & CSS file

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Naviagtion bar */
 .topnav a {
   float: left;
   color: #f2f2f2;
@@ -11,6 +12,7 @@
   color: red;
 }
 
+/* Section 1 */
 #homepage-background {
   background-image: url("html_task_pictures/pexels-photo-5965948.jpeg");
   min-height: 600px;
@@ -19,3 +21,57 @@
   background-size: cover;
 
  }
+
+/* Section 6 */
+#section-6{
+  padding-left: 120px;
+  padding-right: 120px;
+}
+
+.flex-container {
+    display: flex; 
+    justify-content: space-around; 
+  
+}
+
+.text-block {
+    flex: 1; 
+    padding: 15px;
+    border: 1px solid #ccc;
+    background-color: #ffffff;
+}
+
+.mindful-block {
+  flex: 1; 
+  padding: 15px;
+  border: 1px solid #ccc;
+  background-color: rgb(242, 238, 236);
+}
+
+
+/* About Us */
+#about-us {
+  border: 1px solid rgb(251, 251, 251);
+  background-color: rgb(242, 238, 236);
+  align-items: center;
+  padding-left: 15px;
+    
+ }
+
+.box {
+  height: 250px;
+  width: 250px;
+  margin-bottom: 15px;
+  border: 1px solid rgb(251, 251, 251);
+  background-color: rgb(253, 75, 5);
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 30px;
+  
+}
+
+
+
+
